# JUCECmakeRepoPrototype

./: CMakeLists.txt
Apps/ConsoleAppTemplate/: CMakeLists.txt
Apps/ConsoleAppTemplate/Source/: Main.cpp
CMake/: Findjuce.cmake
Libraries/: CMakeLists.txt
Libraries/Source/: LibraryAPI.cpp  LibraryAPI.h  LibraryImpl.cpp  LibraryImpl.h
